simplify addShoppingList